# public-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check-pre-commit.yml
docs/: how-to-add-a-hook.md
pre_commit_hooks/: check-sqlfluff.py  check_sqlfluff.py
