[tool.poetry]
name = "public-pre-commit-hooks"
version = "1.0.0"
description = "Custom Public Pre-commit hooks build by Future Facts"
authors = [
    "Ramses Kools <ramses.kools@futurefacts.nl>"
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "pre_commit_hooks"},
]

[tool.poetry.dependencies]
python = ">=3.9"
sqlfluff = ">=3.3.1,<4.0.0"

[tool.poetry.scripts]
check_sqlfluff = "pre_commit_hooks.check_sqlfluff:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
